--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		/* Create two unequal columns that floats next to each other */
 	.column {
   		float: left;
-  		padding: 30px 30px 30px 30px;
+  		padding: 1.5%;
   		/*position: relative;*/
   			
 	}
