--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 				
 			</div>
 			<div class="column right" style="background-color:#d7e5fc">
-					/*<h1>News</h1>
+					<!-- <h1>News</h1>
 					<section class="news">
 					<h2><i>My defense and celebrations during this unconventional time </i></h2>
 					
 					<p><i>After my zoom doctoral defense on Nov 11, 2020, I had my very special graduation celebration in a dark forest by strictly following the current lockdown guidelines which only allows gathering from two households. Anna Jäger represented all my colleagues to hand over my exquisite doctoral hat and celebrate my graduation in this dark winter evening together with two ice-cold pieces of cakes. Both of us were freezing, but I was feeling on the top of the world when I received my lovely hand-made doctoral hat and bear. </i></p>
 					<center> <img class="withHat" src="img/withHatBear.jpg" alt="withHat"> </center>
-					</section> */
+					</section> -->
 					<h1>Upcoming Events</h1>
 					<ul class="comingevents">
 						<li>
@@ -161,7 +161,7 @@
 	<footer>
 		<p>
 			This website was created by Liwen Wu. &copy;Liwen Wu<br>
-			Last update: Nov 30, 2020 
+			Last update: Dec 8, 2021 
 		</p>
 	</footer>
 </body>
