--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 				<h3>
 				Postdoctoral Researcher <br>
 				</h3>
-				Eco-Environmental Research Laboratory, Westlake University
+				Eco-Environmental Research Laboratory
+				Westlake University
 				<h2>
 					Contact Information
 				</h1>
