--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 	* {
   		box-sizing: border-box;
-  		position: relative;
+  		<!-- position: relative; -->
 	}
 
 		/* Create two unequal columns that floats next to each other */
