--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<h3>
 				Postdoctoral Researcher <br>
 				</h3>
-				Eco-Environmental Research Laboratory <br>
+				Eco-Environmental Research Lab <br>
 				Westlake University
 				<h2>
 					Contact Information
@@ -153,7 +153,7 @@
 					<h1>Upcoming Events</h1>
 					<ul class="comingevents">
 						<li>
-							AGU Fall Meeting, New Orleans, LA & Online Everywhere, 13-17 Dec 2021. I will give an oral presentation on <b>Hyporheic Exchange under Seasonally Connected Groundwater Surface-water Systems</b> in the session of <i>Non-perennial Streams: An Interface Between Hydrology, Ecology, Biogeochemistry, and Society</i> on <i><b>Thursday, 16 December 2021 at 08:00 - 09:15 am CST</i></b>. Registered attendees can already check out my presenation video and slides on the conference system. See you then!
+							AGU Fall Meeting, New Orleans, LA & Online Everywhere, 13-17 Dec 2021. I will give an oral presentation on <b>Hyporheic Exchange under Seasonally Connected Groundwater Surface-water Systems</b> in the session of <i>Non-perennial Streams: An Interface Between Hydrology, Ecology, Biogeochemistry, and Society</i> on <i><b>Thursday, 16 December 2021 at 08:00 - 09:15 am CST</i></b>. Registered attendees can already check out my presentation video and slides in the conference system. See you then!
 						</li>
 					</ul>
 			</div>
