--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 			Hi! I am Liwen Wu. Welcome to my homepage!
 
 		</h1> 
+		.cover {
+  			object-fit: cover;
+  			width: 50px;
+  			height: 100px;
+			}
 		<img class="headerpic" src="img/header_pic2.jpg" alt="beutifal water">
 	</header>
 
