--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 	* {
   		box-sizing: border-box;
-  		<!-- position: relative; -->
+  		position: relative;
 	}
 
 		/* Create two unequal columns that floats next to each other */
@@ -44,12 +44,7 @@
 			Hi! I am Liwen Wu. Welcome to my homepage!
 
 		</h1> 
-		.cover {
-  			object-fit: cover;
-  			width: 50px;
-  			height: 100px;
-			}
-		<img class="headerpic" src="img/header_pic2.jpg" alt="beutifal water">
+		<img class="headerpic" src="img/header_pic2.jpg" alt="beutifal water" width="100%">
 	</header>
 
 	<main>
