--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 				</h1>
 				<h3><b>Dr. rer. nat.</b></h3>
 				<h3>
-				Postdoctoral Researcher <br>
+				Assitant Professor <br>
 				</h3>
-				Eco-Environmental Research Lab <br>
-				Westlake University
+				Environmental Science <br>
+				Xi'an Jiaotong-Liverpool University
 				<h2>
 					Contact Information
 				</h1>
 			
 				<ul>
-					<li>Email: <a href="mailto: wuliwen@westlake.edu.cn" target="_blank" rel="noopener noreferrer">wuliwen@westlake.edu.cn</a></li>
+					<li>Email: <a href="mailto: Liwen.Wu@xjtlu.edu.cn" target="_blank" rel="noopener noreferrer">Liwen.Wu@xjtlu.edu.cn</a></li>
 					<li><a href="https://scholar.google.com/citations?user=wUu1FEMAAAAJ&hl=de&oi=ao" target="_blank" rel="noopener noreferrer">Google Scholar</a></li>
 					<li><a href="https://orcid.org/0000-0001-5642-3860" target="_blank" rel="noopener noreferrer">ORCID</a></li>
 				</ul>
@@ -85,7 +85,7 @@
 						
 					</p>
 					<p>
-						I hold a doctoral degree in Geography (Dr. rer. nat. with great honors: Magna Cum Laude) from department of Mathematics and Natural Sciences in Humboldt University of Berlin. I am currently a postdoctoral researcher in Eco-Environmental Research Laboratory, Westlake University in China. 
+						I hold a doctoral degree in Geography (Dr. rer. nat. with great honors: Magna Cum Laude) from department of Mathematics and Natural Sciences in Humboldt University of Berlin. I am an assistant professor in the department of Health and Environment Sciences, Xi'an Jiaotong-Liverpool University in Suzhou, China. 
 					</p>
 				</section>
 					<h1>Peer-Reviewed Journal Publications</h1>
